# mle-training

./: Dockerfile  README.md  config.json  env.yml  housing_project_deep_dive.ipynb  my_model.pkl  nonstandardcode.py  pyproject.toml  test.py
artifacts/: model.pkl
data/processed/: test.csv  train.csv
data/raw/: housing.tgz:Zone.Identifier
docs/: modules.rst
docs/source/: conf.py  housing_project.rst
mlruns/0/: meta.yaml
mlruns/0/6f7218c02ffb4e6bb0db9d42d7fd4c3d/: meta.yaml
mlruns/0/6f7218c02ffb4e6bb0db9d42d7fd4c3d/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/156903211052711888/: meta.yaml
mlruns/156903211052711888/73f3affb0ce64c4e91900a63bd5dd20c/: meta.yaml
mlruns/156903211052711888/73f3affb0ce64c4e91900a63bd5dd20c/tags/: mlflow.runName
mlruns/278370123609831257/: meta.yaml
mlruns/278370123609831257/71b6f166f799450290268f78e3b11871/: meta.yaml
mlruns/278370123609831257/71b6f166f799450290268f78e3b11871/metrics/: mae  mse  r2  rmse
mlruns/538223612411982452/: meta.yaml
mlruns/650509291358821919/: meta.yaml
mlruns/650509291358821919/c4a0846ce3fb40d88999ea4ae0f40f84/: meta.yaml
mlruns/720624371743715968/: meta.yaml
mlruns/720624371743715968/e2924213074b4e5186cf6b7aa6e68d18/: meta.yaml
nonstandardcode.egg-info/: PKG-INFO  SOURCES.txt
script/: ingest_data.py  main.py  score.py  train.py
script/mlruns/0/: meta.yaml
src/housing_project/: __init__.py  housing_functions.py
src/housing_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_ingest_data.py  test_score.py
(+8 files in other folders)
